Tue Aug 24 11:29:45 UTC 2010 Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * ace/Log_Msg.h:
        * ace/Log_Msg.cpp:
        * tests/Log_Msg_Test.cpp:
        * ChangeLog:
        Add %#t to log a thread id that is coming from user code, as argument .

Mon Aug 23 19:51:59 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Missing_Svc_Conf_Test.cpp:
        
          Fix some scoreboard problems.

Mon Aug 23 15:05:56 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/Select_Reactor.h:

          vc10 needs an "ACE_Export" declaration on the explicit template
          instantiation of ACE_Select_Reactor.

Mon Aug 23 13:23:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-kfreebsd.h:
          New config file for kfreebsd

        * ace/config-win32-common.h:
          Removed commented out defines

Mon Aug 23 11:57:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/INet_SSL_Export.h:
        * protocols/ace/INet/HTTPS_Context.h:
        * protocols/ace/INet/HTTPS_SessionFactory.h:
        * protocols/ace/INet/HTTPS_URL.h:
        * protocols/ace/INet/SSL_CallbackManager.h:
        * protocols/ace/INet/SSL_CertificateCallback.h:
        * protocols/ace/INet/SSL_PasswordCallback.h:
        * protocols/ace/INet/SSL_X509Cert.h:
        * protocols/ace/INet/inet_ssl.mpc:
          Changes to fix MSVC 7/8 link errors.

Mon Aug 23 11:34:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTPS_URL.h:
          Fixed GCC41 error concerning comma at end of enum list.

Sat Aug 21 12:53:05 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Missing_Svc_Conf_Test.cpp:

          Added a descriptive comment block to the source.

Fri Aug 20 13:29:22 UTC 2010  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Service_Gestalt.cpp:

          One more shot at fixing the behavior of the service configurator